src/rules/snapshots/pg_migration_lint__rules__pgm016__tests__add_pk_no_unique_fires.snap
---
source: src/rules/pgm016.rs
expression: findings
---
- rule_id: PGM016
  severity: Major
  message: "ADD PRIMARY KEY on existing table 'orders' without USING INDEX on column(s) [id]. Create a UNIQUE index CONCURRENTLY first, then use ADD PRIMARY KEY USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
