src/rules/snapshots/pg_migration_lint__rules__pgm016__tests__add_pk_using_index_no_backing_index_fires.snap
---
source: src/rules/pgm016.rs
expression: findings
---
- rule_id: PGM016
  severity: Major
  message: "ADD PRIMARY KEY USING INDEX 'idx_nonexistent' on table 'orders': referenced index does not exist."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
