src/rules/snapshots/pg_migration_lint__rules__pgm016__tests__set_not_null_on_existing_table_fires.snap
---
source: src/rules/pgm016.rs
assertion_line: 115
expression: findings
---
- rule_id: PGM016
  severity: Critical
  message: "SET NOT NULL on column 'status' of existing table 'orders' requires an ACCESS EXCLUSIVE lock and full table scan. Use a CHECK constraint with NOT VALID, validate it, then set NOT NULL."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
